# hcddl

./: README.md
flower_app/: pyproject.toml
flower_app/hcddl/: async_global_ps.py  async_local_ps.py  async_local_ps_client.py  client_app.py  global_ps.py  local_ps.py  local_ps_client.py  server_app.py  task.py  worker_client.py
global/: pyproject.toml
global/global_app/: async_global_ps.py  client_app.py  global_ps.py  server_app.py  task.py
local/: pyproject.toml
local/local_app/: async_local_ps.py  client_app.py  local_ps.py  server_app.py  task.py
playbooks/: deploy.yml  run.yml  setup.yml  start.yml
playbooks/tasks/: assign_cluster.yml  assign_hosts.yml  assign_worker.yml  flat_assign_hosts.yml
resources/: requirements.txt  start_global_ps.sh  start_local_ps.sh  start_worker.sh
