# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hcddl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.20.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dflocos"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "hcddl.server_app:app"
clientapp = "hcddl.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
arch = ""
server-type = ""
aggr-type = ""
num-server-rounds = 5
target-accuracy = 0.9
batch-size = 32
verbose = false

# Default federation to use when running the app
[tool.flwr.federations]
default = "remote-federation"

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
insecure = true
address = ""
