[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dfl0"

[tool.flwr.app.components]
serverapp = "global_app.server_app:app"
clientapp = "global_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
target-accuracy = 0.75
local-epochs = 1
batch-size = 32
verbose = true

[tool.flwr.federations]
default = "global-ps"

[tool.flwr.federations.global-ps]
address = "127.0.0.1:9093"
insecure = true
