[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dfl0"

[tool.flwr.app.components]
serverapp = "local_app.server_app:app"
clientapp = "local_app.client_app:app"

[tool.flwr.app.config]
# num-server-rounds = 3
local-epochs = 1
batch-size = 32
verbose = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-ps1]
address = "127.0.0.1:8083"
insecure = true
